[project]
name = "marlplay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "distrax>=0.1.5",
    "ipykernel>=6.29.5",
    "jax>=0.6.2",
    "jax-dataclasses>=1.6.2",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "tensorflow-probability>=0.25.0",
]
